2011-10-17  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_frexp.c: New file.

	* sysdeps/x86_64/fpu/math_private.h: Relax asm requirements for
	recently added interfaces.
	* sysdeps/x86_64/fpu/bits/mathinline.h: Likewise.

	* sysdeps/x86_64/fpu/math_private.h: Add some parenthesis to be safe
	about macro parameter expansion.

	* sysdeps/x86_64/fpu/bits/mathinline.h: Don't define inlines if
	__NO_MATH_INLINES is defined.  Cleanups.

	* sysdeps/x86_64/fpu/math_private.h: Define __rint, __rintf, __floor,
	and __floorf is target has SSE4.1.
	* sysdeps/x86_64/fpu/multiarch/s_floor-c.c: Undef first.
	* sysdeps/x86_64/fpu/multiarch/s_floorf-c.: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_rint-c.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_rintf-c.c: Likewise.

	* sysdeps/x86_64/fpu/bits/mathinline.h (floor): Use correct function
	name.
	(floorf): Likewise.

	* nscd/netgroupcache.c (addgetnetgrentX): Fix #ifdef nesting.

2011-10-17  Andreas Schwab  <schwab@redhat.com>

	* misc/sys/cdefs.h: Fix last change.

	* grp/initgroups.c (internal_getgrouplist): Fix initgroups
	database lookup.

2011-10-16  Ulrich Drepper  <drepper@gmail.com>

	* misc/sys/cdefs.h: Use leaf function attribute in __THROW.

	* sysdeps/ieee754/dbl-64/s_ceil.c: Avoid alias renamed.
	* sysdeps/ieee754/dbl-64/s_floor.c: Likewise.
	* sysdeps/ieee754/dbl-64/s_rint.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_ceil.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_floor.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_rint.c: Likewise.
	* sysdeps/ieee754/flt-32/s_ceilf.c: Likewise.
	* sysdeps/ieee754/flt-32/s_floorf.c: Likewise.
	* sysdeps/ieee754/flt-32/s_rintf.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/Makefile: New file.
	* sysdeps/x86_64/fpu/multiarch/s_ceil-c.c: New file.
	* sysdeps/x86_64/fpu/multiarch/s_ceil.S: New file.
	* sysdeps/x86_64/fpu/multiarch/s_ceilf-c.c: New file.
	* sysdeps/x86_64/fpu/multiarch/s_ceilf.S: New file.